# G1

./: README.md  pyproject.toml
docs/: project-overview.md  schedule.md
src/share/: cli.py  create.py  list.py  remove.py
src/share/commands/: remove.py
src/share/list/: list.py
tests/: test_create.py  test_list.py  test_remove.py  test_upload.py
