[project]
name = "share"
version = "0.1.0"
description = "Dropbox 上のファイルを選択して共有リンクを発行する CLI ツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dropbox>=12.0.0",
]

[project.scripts]
share = "share.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "radon>=6.0",
    "flake8>=7.0",
    "flake8-pyproject>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/share"]

[tool.flake8]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=share --cov-report=term-missing"

[tool.coverage.run]
source = ["src/share"]
